--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "basic-todoapi-actix-sqlx"
 version = "0.1.0"
-authors = ["jawadcode <bandashing@gmail.com>"]
+authors = ["Jawad W. Ahmed <Jawad.W.Ahmed@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
